# bt_switch

./: README.md  pyproject.toml
bt_switch/: __main__.py  config.py  config_service.py  driver.py  exceptions.py  executor.py  models.py  service.py  tui.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_groups.py  test_config_service.py  test_driver.py  test_executor.py  test_models.py  test_service.py  test_service_batch.py  test_tui_add_screens.py  test_tui_config.py  test_tui_dashboard.py  test_tui_defaults.py  test_tui_groups.py  test_tui_repro.py
