[project]
name = "bt-switch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.4.5",
    "loguru>=0.7.3",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "tomlkit>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-m 'not external'"
markers = [
    "external: marks tests that require internet access or external services",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
extend-select = ["I"]

[project.scripts]
bt-switch = "bt_switch.__main__:app"

[tool.uv]
package = true
